2004-03-07  David Schleef  <ds@schleef.org>

	* docs/random/mimetypes:  Added cinepak description

2004-03-07  Andy Wingo  <wingo@pobox.com>

	* gst/gstbin.c (gst_bin_remove): Debugging fixes.

	* gst/schedulers/gstoptimalscheduler.c (destroy_group): Assert
	there are no links to other groups when a group is destroyed.
	(gst_opt_scheduler_pad_unlink): If the unlink means an element is
	removed from a group, make sure the link count to elements linked
	to other pads is appropriately decremented. This really fixes
	#135672.

	The 1.60->1.61 patch has been reapplied in light of this fix.

	* gst/gstelement.c (gst_element_dispose): Really protect against
	multiple invocations this time.

2004-03-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/gsttag.sgml:
          remove some deprecated functions, document some existing ones
	* gst/gsttag.c: (gst_tag_get_flag):
	* gst/gsttag.h:
          add accessor function

2004-03-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: <delete if not using a buddy>

	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/gsttag.sgml:
	* docs/gst/tmpl/gstxml.sgml:
	* gst/gsttag.c: (gst_tag_get_flag):
	* gst/gsttag.h:

2004-03-06  Christophe Fergeau  <teuf@gnome.org>

	* gst/autoplug/gstspider.c: (gst_spider_identity_plug): fixed caps
	leak

2004-03-05  David Schleef  <ds@schleef.org>

	reviewed by: <delete if not using a buddy>

	* REQUIREMENTS: Add bison and flex.
	* configure.ac: Fix comment about bison.
	* docs/random/ds/0.9-suggested-changes: yer ma
	* tools/gst-inspect.c: (print_element_info):  Fix warning.

2004-03-05  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_error_full):
	  revert recent recursive state changing commit - messing with other
	  elements' states is evil and should be done by apps only.

2004-03-05  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_get_compatible_pad_template):