@@ -1,3 +1,8 @@
+2004-03-08  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* docs/pwg/advanced-types.xml:
+	  Add cinepak description.
+
 2004-03-07  David Schleef  <ds@schleef.org>
 
 	* docs/random/mimetypes:  Added cinepak description
